--- a/index.html
+++ b/index.html
@@ -6,30 +6,35 @@
         <meta name="description" content="practicing responsive-site">
         <meta name="keywords" content="responsive, pc, smart-phone">
         <link rel="stylesheet" href="./css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
-            <div class="lady.jpg">
-                <img src="./images/surfing-lady.jpg">
+            <div class="lady">
+               
             </div>
         </header>
-        <main>
-            <section id="intro">
+        <section id="intro">
                 <h1>僕とサーフィンに行くべき３つの理由</h1><!-- 導入文が入るところです -->
             </section>
-            <section id="1st-merit">
+        <main class="clearfix">
+            <section class="merit">
                 <h2>1.夏を感じよう！！</h2><!-- 夏を感じよう -->
+                <p>待ちに待った夏が来た！海だ！でも普通の海水浴はもう飽きたでしょ？今年はいつもと違う夏を楽しもう！</p>
             </section>
-            <section id="2nd-merit">
+            <section class="merit">
                 <h2>2.趣味にしよう！！</h2><!-- 趣味にしよう -->
+                <p>セーザルとサーフィンに行ったら波の乗り方を教えてもらえる！この機会にマスターして趣味を増やそう！</p>
             </section>
-            <section id="3rd-merit">
+            <section class="merit">
                 <h2>3.夕焼けを見よう！！</h2><!-- 夕焼けを見よう -->
-            </section>
-            <section id="push-button">
-                <!-- さあ連絡しよう -->
+                <p>サーフィンに夢中になっていたら、そこにはとても綺麗な夕焼けが！この美しい光景を目に焼き付けよう！</p></p>
             </section>
         </main>
+        <section id="push-button">
+               <h3 class="text-center">さあ！！連絡しよう！！</h3> <!-- さあ連絡しよう -->
+               <p id="push-it"><a href="mailto:watanabeyuske@gmail.com">Contact</a></p>
+            </section>
         <footer>
             <div id="copyright">
         Copyright(C)2017 Cezar Watanabe All Rights Reserved.
